src/test/ui/liveness/liveness-move-call-arg.stderr
error[E0382]: use of moved value: `x`
  --> $DIR/liveness-move-call-arg.rs:9:14
   |
LL |     let x: Box<isize> = Box::new(25);
   |         - move occurs because `x` has type `Box<isize>`, which does not implement the `Copy` trait
...
LL |         take(x);
   |              ^ value moved here, in previous iteration of loop

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
